Bug 407205 - You can no longer drag and drop using tab mode
Summary: You can no longer drag and drop using tab mode
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
: 408285 409002 409976 409993 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-04 05:16 UTC by reptillia39
Modified: 2022-08-11 13:20 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description reptillia39 2019-05-04 05:16:42 UTC
SUMMARY

Basically what title said. You could do it in subwindow mode fine and dandy.I would like to see it work on tab mode.


STEPS TO REPRODUCE
Tab Mode
1. Open two images. 
2. Click and hold the button over the layer.
3. Move it over the title of the document. 
4. See the nope cursor

To verify it works on Subwindow mode
After Step #3, you simply move it into the layer document after the subwindow switched

OBSERVED RESULT
No indication it works


EXPECTED RESULT
Behaves like the sub-window counterpart

SOFTWARE/OS VERSIONS
Windows: 10 x64
Qt Version: 5.12
Software : Krita 4.2 Pre-Alpha git dd3746f

ADDITIONAL INFORMATION
Comment 1 reptillia39 2019-05-04 05:20:02 UTC
layer docker*

Correction.
Comment 2 Raghavendra kamath 2019-05-04 05:46:28 UTC
I confirm this in master.
Comment 3 Halla Rempt 2019-05-04 07:58:16 UTC
This is because of a change in Qt 5.12, and we simply cannot do anything whatsoever about it.
Comment 4 Halla Rempt 2019-06-04 11:42:34 UTC
*** Bug 408285 has been marked as a duplicate of this bug. ***
Comment 5 Halla Rempt 2019-07-20 07:54:02 UTC
*** Bug 409993 has been marked as a duplicate of this bug. ***
Comment 6 Halla Rempt 2019-07-20 07:54:44 UTC
*** Bug 409976 has been marked as a duplicate of this bug. ***
Comment 7 Halla Rempt 2019-07-20 07:54:49 UTC
*** Bug 409002 has been marked as a duplicate of this bug. ***
Comment 8 Halla Rempt 2019-07-20 07:56:39 UTC
I'm going to reopen this because we need to find a workaround... https://bugreports.qt.io/browse/QTBUG-72844 claims it's fixed in 5.12.3, but that's obviously not the case.
Comment 9 Rafal 2019-09-11 13:54:42 UTC
It is been couple new releases since this bug appeared, but still drag and drop  like in Krita 4.1.7. doesn't work. Is the team still working on fixing it?
Comment 10 Halla Rempt 2019-09-11 13:59:05 UTC
No... We haven't managed to find a workaround, and we're now on Qt 5.12.4, but it's still broken in Qt.
Comment 11 Rafal 2019-09-11 21:56:42 UTC
Thank you Boudewijn for the answer.
Just to be sure, are you intend to make it work as before, or do you leave it as it it is now ?

I am asking because this change affects my workflow so much that I am still working in Krita 4.1.7 and I am waiting for next release with that being fixed.
BUt if you don't intend to fix it, I think I will have to use newest version and just readjust to new workflow.
Comment 12 Halla Rempt 2019-09-12 08:01:35 UTC
There's nobody working on this at the moment.
Comment 13 Halla Rempt 2022-08-11 13:19:42 UTC
Git commit fc8be6b00a3b923a67a082bd0b9fa651ce417549 by Halla Rempt.
Committed on 11/08/2022 at 13:17.
Pushed by rempt into branch 'master'.

Activate the view when hovering over the tab

You cannot drop on the tab, it just activates the tab, and you
need to drop on the canvas or on the layerbox. But this is already
more than we've had for way too long...

M  +26   -0    libs/ui/KisMainWindow.cpp
M  +2    -0    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/commit/fc8be6b00a3b923a67a082bd0b9fa651ce417549
Comment 14 Halla Rempt 2022-08-11 13:19:55 UTC
Git commit 2f48b6176b38c9fe35b105b64174efaf6c760f8c by Halla Rempt.
Committed on 11/08/2022 at 13:19.
Pushed by rempt into branch 'krita/5.1'.

Activate the view when hovering over the tab

You cannot drop on the tab, it just activates the tab, and you
need to drop on the canvas or on the layerbox. But this is already
more than we've had for way too long...
(cherry picked from commit fc8be6b00a3b923a67a082bd0b9fa651ce417549)

M  +26   -0    libs/ui/KisMainWindow.cpp
M  +2    -0    libs/ui/KisMainWindow.h

https://invent.kde.org/graphics/krita/commit/2f48b6176b38c9fe35b105b64174efaf6c760f8c
Comment 15 Halla Rempt 2022-08-11 13:20:17 UTC
I did it :-)