Activate the view when hovering over the tab

You cannot drop on the tab, it just activates the tab, and you
need to drop on the canvas or on the layerbox. But this is already
more than we've had for way too long...

BUG:407205